v1.21.0/man/index.md
---
layout: page
title: Libfabric man pages
tagline: Development
---
{% include JB/setup %}

# Man pages

These man pages are from [libfabric
v1.21.0](https://github.com/ofiwg/libfabric/releases/tag/v1.21.0).

* Developer guide
  * [fi_guide(7)](fi_guide.7.html)
  * [fi_intro(7)](fi_intro.7.html)
  * [fi_arch(7)](fi_arch.7.html)
  * [fi_setup(7)](fi_setup.7.html)

* General information
  * [fabric(7)](fabric.7.html)
  * [fi_direct(7)](fi_direct.7.html)
  * [fi_provider(7)](fi_provider.7.html)

* API documentation
  * [fi_atomic(3)](fi_atomic.3.html)
  * [fi_av(3)](fi_av.3.html)
  * [fi_av_set(3)](fi_av_set.3.html)
  * [fi_cm(3)](fi_cm.3.html)
  * [fi_cntr(3)](fi_cntr.3.html)
  * [fi_collective(3)](fi_collective.3.html)
  * [fi_control(3)](fi_control.3.html)
  * [fi_cq(3)](fi_cq.3.html)
  * [fi_domain(3)](fi_domain.3.html)
  * [fi_endpoint(3)](fi_endpoint.3.html)
  * [fi_eq(3)](fi_eq.3.html)
  * [fi_errno(3)](fi_errno.3.html)
  * [fi_fabric(3)](fi_fabric.3.html)
  * [fi_getinfo(3)](fi_getinfo.3.html)
  * [fi_msg(3)](fi_msg.3.html)
  * [fi_mr(3)](fi_mr.3.html)
  * [fi_nic(3)](fi_nic.3.html)
  * [fi_peer(3)](fi_peer.3.html)
  * [fi_poll(3)](fi_poll.3.html)
  * [fi_profile(3)](fi_profile.3.html)
  * [fi_provider(3)](fi_provider.3.html)
  * [fi_rma(3)](fi_rma.3.html)
  * [fi_tagged(3)](fi_tagged.3.html)
  * [fi_trigger(3)](fi_trigger.3.html)
  * [fi_version(3)](fi_version.3.html)

* Provider details
  * [fi_cxi(7)](fi_cxi.7.html)
  * [fi_efa(7)](fi_efa.7.html)
  * [fi_hook(7)](fi_hook.7.html)
  * [fi_mrail(7)](fi_mrail.7.html)
  * [fi_opx(7)](fi_opx.7.html)
  * [fi_psm2(7)](fi_psm2.7.html)
  * [fi_psm3(7)](fi_psm3.7.html)
  * [fi_rxd(7)](fi_rxd.7.html)
  * [fi_rxm(7)](fi_rxm.7.html)
  * [fi_shm(7)](fi_shm.7.html)
  * [fi_sockets(7)](fi_sockets.7.html)
  * [fi_tcp(7)](fi_tcp.7.html)
  * [fi_ucx(7)](fi_ucx.7.html)
  * [fi_udp(7)](fi_udp.7.html)
  * [fi_usnic(7)](fi_usnic.7.html)
  * [fi_verbs(7)](fi_verbs.7.html)

* Utilities
  * [fi_info(1)](fi_info.1.html)
  * [fi_pingpong(1)](fi_pingpong.1.html)
  * [fi_strerror(1)](fi_strerror.1.html)

* Fabtests
  * [fabtests(7)](fabtests.7.html)
